# codasai-old

./: .gitignore  Cargo.toml  justfile
.fossil-settings/: ignore-glob
codasai-cli/: Cargo.toml
codasai-cli-tests/: Cargo.toml
codasai-cli-tests/src/: lib.rs  wild.rs
codasai-cli-tests/tests/: build.rs  init.rs  page.rs
codasai-cli/src/: commands.rs  config.rs  main.rs  opts.rs  util.rs
codasai-cli/src/commands/: build.rs  init.rs  page.rs  serve.rs
codasai-cli/src/config/: guide.rs  page.rs
codasai-server/: Cargo.toml  build.rs  justfile
codasai-server/src/: file.rs  lib.rs  state.rs
codasai-server/static/: index.html  style.scss
codasai-types/: Cargo.toml
codasai-types/src/: guide.rs  lib.rs  vfs.rs
codasai-types/src/snapshots/: codasai_cli__guide__tests__from_git.snap
codasai-types/src/vfs/: directory.rs  file.rs  path.rs  snapshot.rs  walker.rs
codasai-web/: Cargo.toml  index.html
codasai-web/src/: app.rs  components.rs  highlighted_chunk.rs  lib.rs  main.rs
codasai-web/src/components/: editor.rs  explorer.rs  page.rs
codasai-web/src/components/editor/: escape.rs  highlight.rs
xtask/: Cargo.toml
xtask/src/: build.rs  main.rs  setup.rs  statik.rs  util.rs
