[package]
name = "codasai-cli"
version = "0.1.0"
authors = ["Emi <emi2k01@gmail.com>"]
edition = "2018"

[dependencies]
codasai-types = { path = "../codasai-types" }
codasai-server = { path = "../codasai-server" }
anyhow = "1.0.41"
git2 = "0.13.20"
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3"
ignore = "0.4"
pulldown-cmark = "0.8"
toml = "0.5"
serde_json = "1.0"
ammonia = "3.1.1"
indoc = "1.0.3"
slug = "0.1.4"
toml_edit = "0.2"
