[package]
name = "codasai-types"
version = "0.1.0"
authors = ["Emi <emi2k01@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
tracing = "0.1.26"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.5"
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.7.1", features = ["serialization", "ron"] }
velcro = "0.5"
