[package]
name = "codasai-web"
version = "0.1.0"
authors = ["Emi <emi2k01@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
codasai-types = { path = "../codasai-types" }
dissimilar = "1.0"
yew = "0.18.0"
gloo = "0.2.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
anyhow = "1.0.41"

[dependencies.web-sys]
version = "0.3"
features = [
    "NodeList",
    "Document",
    "EventTarget",
    "Element",
    "DomTokenList",
]
